Fix subreddit dropdown covering the sr-header area

--- a/scss/components/_header-bar.scss
+++ b/scss/components/_header-bar.scss
@@ -130,6 +130,7 @@
 
   .drop-choices.srdrop {
     display: block;
+    top: 0 !important; // overriding the element inline style
     right: 20px;
     left: 20px !important; // overriding the element inline style
     margin-left: 0;
